--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-#server
-server.port=8080
-
 #jpa
 spring.datasource.url=jdbc:h2:./data/localdb;MODE=Oracle;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
@@ -16,12 +13,28 @@ spring.jpa.properties.hibernate.jdbc.batch_size=1000
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 #logging
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestResponseBodyMethodProcessor=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
+logging.level.org.springframework.web=INFO
+logging.level.com.demo.game=DEBUG
+logging.level.root=INFO
+
+# Konfiguracja formatowania logów
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} %highlight(%-5level) %magenta([%thread]) %cyan(%logger{36}) - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%-5level] [%thread] %logger{50} - %msg%n
+# Konfiguracja plików logów
+
+logging.file.name=logs/application.log
 logging.logback.rollingpolicy.max-history=7
 logging.logback.rollingpolicy.max-file-size=20MB
-logging.file.name=logs/application.log
+logging.logback.rollingpolicy.total-size-cap=500MB
+logging.logback.rollingpolicy.clean-history-on-start=true
+# Dodatkowe ustawienia dla lepszej czytelnosci
 
+logging.charset.console=UTF-8
+logging.charset.file=UTF-8
